# ChangeLog for dev-cpp/libxmlpp
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.77 2008/08/10 10:43:40 maekke Exp $

  10 Aug 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking libxmlpp-2.22.0 ppc stable for bug 229709

  27 Jul 2008; Olivier Crête <tester@gentoo.org> ChangeLog:
  Stable on amd64, bug #229709

  21 May 2008; Raúl Porcel <armin76@gentoo.org> libxmlpp-2.22.0.ebuild:
  alpha stable wrt #222749

  20 May 2008; Markus Rothe <corsair@gentoo.org> libxmlpp-2.22.0.ebuild:
  Stable on ppc64; bug #222749

  20 May 2008; Jeroen Roovers <jer@gentoo.org> libxmlpp-2.22.0.ebuild:
  Stable for HPPA (bug #222749).

  19 May 2008; Daniel Gryniewicz <dang@gentoo.org> libxmlpp-1.0.4-r2.ebuild:
  Move automake/autoconf deps from RDEPEND to DEPEND. Bug #221547

  19 May 2008; Markus Meier <maekke@gentoo.org> libxmlpp-2.22.0.ebuild:
  amd64/x86 stable, bug #222749

  19 May 2008; Ferris McCormick <fmccor@gentoo.org> libxmlpp-2.22.0.ebuild:
  Sparc stable --- Bug #222749 --- Builds and examples seem to work.

  19 May 2008; nixnut <nixnut@gentoo.org> libxmlpp-2.22.0.ebuild:
  Stable on ppc wrt bug 222749

  02 May 2008; Rémi Cardona <remi@gentoo.org>
  +files/libxmlpp-1.0.5-gcc43.patch, libxmlpp-1.0.5.ebuild:
  gcc 4.3 build fix, see bug #218779

  12 Apr 2008; Rémi Cardona <remi@gentoo.org> Manifest:
  fix manifest, bug #215451

*libxmlpp-2.22.0 (11 Apr 2008)

  11 Apr 2008; Rémi Cardona <remi@gentoo.org> +libxmlpp-2.22.0.ebuild:
  Bump to 2.22.0, fix leak and fix for gcc 4.3

  27 Mar 2008; Jeroen Roovers <jer@gentoo.org> libxmlpp-1.0.5.ebuild:
  Marked ~hppa (bug #214356).

  23 Mar 2008; Raúl Porcel <armin76@gentoo.org> libxmlpp-1.0.5.ebuild:
  Add ~alpha/~ia64 wrt #214356

  23 Mar 2008; Brent Baude <ranger@gentoo.org> libxmlpp-1.0.4-r2.ebuild:
  keyworded ~arch for ppc64, bug 214356
