@@ -8,18 +8,20 @@ DIST libxml++-2.12.0.tar.bz2 669798 RMD160 28e9bded7c228c76296921008d923133c4207
 DIST libxml++-2.13.1.tar.bz2 1363452 RMD160 4584ca436b9a1a2b1c27bd004fd79223c583ca0b SHA1 3b9c9890805b30b7e019e7b8450692d4e69f0f00 SHA256 73a06adf6624e7db531eaac2cbc88e9db3eeafdee8e167a19f9455454fbe139d
 DIST libxml++-2.20.0.tar.bz2 1460110 RMD160 25880dd607a6c10d0e9f77a6cefbee3cfe11da72 SHA1 4c332cf7f8cbd2e78bd893c74e5b6152360fe465 SHA256 3973cb67cd96253b9a5214747302a9e02cf8267e9d471ca871384677e4b70fa8
 DIST libxml++-2.22.0.tar.bz2 1485168 RMD160 834588297451c6dc291ea6327a22699fed8ba76c SHA1 8c69339e1b472bd5e541e30fdaa47b152bc186bc SHA256 614954876e016e684d5638c00842451cdd2a4f55717b4e699cd7050a95d79de2
+DIST libxml++-2.24.0.tar.bz2 526735 RMD160 25ec3ede1ac18f8b2b3afa44f93699e2cb3195bc SHA1 bfeeda534a4ba3800c6cf22fd0aa9136f3036d99 SHA256 a79b76f44f6006b8144fa2fa35372e2c14d30092cf3679bf2637c7ea36fe3df1
 EBUILD libxmlpp-1.0.4-r2.ebuild 898 RMD160 1cefe857aa2635efe418e635c49541eb0f1e3633 SHA1 3a9deee84341abab13fab3945d13788df9ab8ff4 SHA256 e40ad5de7a13b740e16766cc44e7396dfe649d7ae0d0632d28673e2c6a47409b
 EBUILD libxmlpp-1.0.5.ebuild 975 RMD160 8fe38e37c833a04e13c36af12b83cc2ac03fd23d SHA1 dce282389d05c085eaa93751a143ee5b8fba5a26 SHA256 da654d385b508e8989172b76a8bede799c01c94d74d16abc4d4cd0f6d0533f93
 EBUILD libxmlpp-2.12.0.ebuild 1148 RMD160 c8c81962b59799141b599207285523cbfa177b98 SHA1 9c17b15c431121bad5a71f7bc7679cda0410455f SHA256 6c0f28fbdb090522c92f836374f5fe2f9a9060f72c9443935916ae967457c1a7
 EBUILD libxmlpp-2.13.1.ebuild 1149 RMD160 6561539b37c1be274279b55e0d4642c4670ef86c SHA1 230eba734715950e6e19b4c277b35b2f3ffa65a0 SHA256 7ebf7f96f9ecff8ec7e84e359fc170a1ab27e0c0e11c4085d03e05ce2c16f8e0
 EBUILD libxmlpp-2.20.0-r1.ebuild 1059 RMD160 3b02a1b0a8283a5923032a9fcd76ac922f7d35da SHA1 7eee3bb286adb100f8580f97c8f3e4514b683197 SHA256 098d90c6aa547aa7ecbf72f82b1428c04699aaf3f73006a8d96b498d961e7f0e
 EBUILD libxmlpp-2.22.0.ebuild 1052 RMD160 e43f60cf4011a28d91252e75c57332c222df8e72 SHA1 f62731e29df1928c2105c238b3f78ae0f707863c SHA256 5b1018fce82a9211b64e97f7f20791477590e957c60093069a6e63dbe96ceed0
-MISC ChangeLog 10946 RMD160 f3dbf0874f77c24c2013ff59fe1fdb998a850688 SHA1 24e0481c3daaa57f5a0605a32c65b27fe71203a9 SHA256 46c04045c101b9d09cb7019c2a02e5cf51ab3956533c096fddf0aa8984e5bc2b
+EBUILD libxmlpp-2.24.0.ebuild 1055 RMD160 3006e53d147d46e65dc24436e6d76b8a0662bb8f SHA1 dd7041f6274f416f420a6455ce6e522647da6a19 SHA256 e18a14fc050b564c2a653520257b0b4f1279aa62784fd5aca98044e79d933e01
+MISC ChangeLog 11117 RMD160 a926726df1a2ea86b8dd6ff7af175ea798515246 SHA1 2dc29f7b0aedce45b501baf876a08627c410e1c0 SHA256 5769aab6f187e92f5b4a38b846bb36d5a05edd6b941a7998b238d99205262ab7
 MISC metadata.xml 162 RMD160 e3b9e3d8ece920d890bf37c43a6bcd9757539556 SHA1 6ee3bb3e0cce43428124dfa192af30ddb055d95f SHA256 7d0ce82d5ca3b20cb1c4641c7b7aae7082fd6be059b85fab9699095fd965f2e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkiexqkACgkQkKaRLQcq0GLL5ACgmXceBSD7uj4Mqb0h7a/XvynT
-AzsAoKLeKCk3tYsnajPpkr0hpD0/q8TF
-=neW8
+iEYEARECAAYFAkkh1XwACgkQ1fmVwcYIWAZGwACg2oPAOgKTChBRIlJ1Wf/5yO7z
+RNwAoKRunY9ZOcRbHDPAB1h3gcBwoF9j
+=Lwam
 -----END PGP SIGNATURE-----
